--- a/web1/src/app/inventory/location-tracker/location-tracker.component.html
+++ b/web1/src/app/inventory/location-tracker/location-tracker.component.html
@@ -16,7 +16,7 @@
                                     <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup === 'CompanyAdmin'">
                                       <mat-label>Shop Name</mat-label>
                                       <mat-select name="shopID" [(ngModel)]="data1.ShopID" >
-                                        <mat-option [value]=0>All</mat-option>
+                                        <!-- <mat-option [value]=0>All</mat-option> -->
                                         <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}}
                                           <span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
                                         </mat-option>
@@ -49,6 +49,16 @@
                                         <mat-error>
                                             ProductSearch required
                                         </mat-error>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
+                                    <mat-form-field class="example-full-width mb-0">
+                                        <mat-label>Located</mat-label>
+                                        <mat-select name="LocatedFillter" [(ngModel)]="data1.LocatedFillter" required #Typecontrol>
+                                            <mat-option [value]=0>All</mat-option>
+                                            <mat-option value='Located'>Located</mat-option>
+                                            <mat-option value='Unloacted'>Unloacted</mat-option>
+                                        </mat-select>
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-2 col-lg-2 col-md-3 col-sm-12 mb-0">
