--- a/web1/src/app/common/about/about.component.html
+++ b/web1/src/app/common/about/about.component.html
@@ -6,7 +6,7 @@
                     <div class="card p-0">
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
-                                <div class="col-lg-12 col-md-12 col-12 p-0 ps-3">
+                                <div class="col-lg-12 col-md-12 col-12 p-0 ps-3 mb-5 mb-md-1">
                                     <h2 >Opticalguru New Updates (Your Software Up To Date) </h2>
                                 </div>
                             </div>
