--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -1262,6 +1262,107 @@
                   </div>
                 </div>
               </mat-tab>
+              
+              <mat-tab  label="Physical Stock Report">
+                <div class="body">
+                  <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getPhysicalStock()">
+                    <div class="row">
+                      <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>From</mat-label>
+                          <input matInput name="FromDate" type="date" [(ngModel)]="PhysicalStock.FromDate" #DOBcontrol
+                            />
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>To</mat-label>
+                          <input matInput type="date" name="ToDate" [(ngModel)]="PhysicalStock.ToDate"
+                           />
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup === 'CompanyAdmin'">
+                          <mat-label>Shop Name</mat-label>
+                          <mat-select name="shopID" [(ngModel)]="PhysicalStock.ShopID" multiple>
+                            <mat-option [value]=0>All</mat-option>
+                            <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}}
+                              <span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                        <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup !== 'CompanyAdmin'">
+                          <mat-label>Shop Name</mat-label>
+                          <mat-select name="shopID" [(ngModel)]="PhysicalStock.ShopID">
+                            <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}}
+                              <span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </div>
+                      
+                      <div class="col-xl-2 col-lg-4 col-md-6 col-12 mb-0 ">
+                        <button class="me-2" type="submit" mat-raised-button color="primary"> Search </button>
+                        <button type="button" mat-raised-button color="warn" (click)="PhysicalStockFromReset()"> Reset
+                        </button>
+                      </div>
+                    </div>
+                  </form>
+                  <!--  list -->
+                  <div class="body p-2">
+                    <div id="PhysicalStock-content" class="col-sm-12" style="overflow: auto; height: 450px;">
+                      <table class="table table-striped table-hover table-sm table-bordered"
+                        style="border: 2px solid #fff !important;" id="PhysicalStock">
+                        <thead>
+                          <tr style="white-space: nowrap;">
+                            <th>S.No</th>
+                            <th>InvoiceDate</th>
+                            <th>InvoiceNo</th>
+                            <th>TotalAvailableQty</th>
+                            <th>TotalPhysicalQty</th>
+                            <th>TotalDiffQty</th>
+                            <th>Remark</th>
+                            <th>ShopName</th>
+                           
+                          </tr>
+                          <tr class="totolRow" >
+                            <td style="white-space: nowrap;">
+                              <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
+                                (click)="exportAsXLSXPhysicalStock()">
+                              </i>
+                              <button class="bg_none ms-4 me-2" (click)="print('PhysicalStock-content')">
+                                <i class="far fa-file-pdf " style="color: #1a1e90;font-size: 22px;cursor: pointer;">
+                                </i>
+                              </button>
+                            </td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                           
+                          </tr>
+                        </thead>
+                        <tbody class="text-center">
+                           <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                           </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </mat-tab>
+
             </mat-tab-group>
           </div>
         </div>
