--- a/web1/src/app/sale/customer-list/customer-list.component.html
+++ b/web1/src/app/sale/customer-list/customer-list.component.html
@@ -75,7 +75,7 @@
                     <table class="table table-striped table-hover table-sm table-bordered"
                       style="border: 2px solid #fff !important;">
                       <thead>
-                        <tr>
+                        <tr >
                           <th class="text-left">Action</th>
                           <th class="text-left">S.No</th>
                           <th class="text-left">Cust_ID</th>
@@ -96,7 +96,7 @@
                         </tr>
                       </thead>
                       <tbody>
-                        <tr class="text-center" *ngFor="let data of dataList let i = index;"
+                        <tr  *ngFor="let data of dataList let i = index;"
                           style="white-space: nowrap;">
                           <td style="width: 7%;">
                             <button *ngIf="this.company.WhatsappMsg == 'true'"  (click)="sendWhatsapp('Fbill',data)" class="bg-btn whatsappBill ms-lg-1 me-lg-1  me-1"><i  class="fa-brands fa-whatsapp "></i></button>
@@ -109,22 +109,22 @@
                               (click)="deleteItem(i)">delete_forever</mat-icon>
                              
                           </td>
-                          <td class="text-left">{{dataList.length - i }}</td>
-                          <td class="text-left">{{data.Idd}} </td>
-                          <td class="text-left">{{data.Sno}} </td>
-                          <td class="text-left">{{data.Name}} </td>
-                          <td class="text-left">{{data.MobileNo1}} </td>
-                          <td class="text-left">{{data.MobileNo2}} </td>
-                          <td class="text-left">{{data.PhoneNo}} </td>
-                          <td class="text-left">{{data.Address}} </td>
-                          <td class="text-left">{{data.rewardBalance}} </td>
-                          <td class="text-left">{{dateFormat(data.VisitDate)}} </td>
-                          <td class="text-left">{{data.Email}} </td>
-                          <td class="text-left">{{dateFormat(data.DOB)}}</td>
-                          <td class="text-left">{{dateFormat(data.Anniversary)}}</td>
-                          <td class="text-left">{{data.CreatedPerson}} </td>
-                          <td class="text-left">{{data.UpdatedPerson}} </td>
-                          <td class="text-left">{{data.ShopName}}
+                          <td class="text-center">{{dataList.length - i }}</td>
+                          <td class="text-center">{{data.Idd}} </td>
+                          <td class="text-center">{{data.Sno}} </td>
+                          <td class="text-left ps-3">{{data.Name}} </td>
+                          <td class="text-center">{{data.MobileNo1}} </td>
+                          <td class="text-center">{{data.MobileNo2}} </td>
+                          <td class="text-center">{{data.PhoneNo}} </td>
+                          <td class="text-left ps-3">{{data.Address}} </td>
+                          <td class="text-center">{{data.rewardBalance}} </td>
+                          <td class="text-center">{{dateFormat(data.VisitDate)}} </td>
+                          <td class="text-center">{{data.Email}} </td>
+                          <td class="text-center">{{dateFormat(data.DOB)}}</td>
+                          <td class="text-center">{{dateFormat(data.Anniversary)}}</td>
+                          <td class="text-center">{{data.CreatedPerson}} </td>
+                          <td class="text-center">{{data.UpdatedPerson}} </td>
+                          <td class="text-center">{{data.ShopName}}
                             <span [style.color]="'blue'" *ngIf="data.AreaName !== null"> ({{data.AreaName}})</span>
                           </td>
                         </tr>
