--- a/web1/src/styles.scss
+++ b/web1/src/styles.scss
@@ -38,14 +38,18 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
-input[type="date"] {
-    padding: 0rem !important;
-    height: 15px;
-    font-size: 14px;
-    line-height: 11px !important;
-    box-sizing: border-box;
-    padding-top: 10px !important;
+// input[type="date"] {
+//     padding: 0rem !important;
+//     height: 15px;
+//     font-size: 14px;
+//     line-height: 11px !important;
+//     box-sizing: border-box;
+//     padding-top: 10px !important;
+// }
+.mat-input-element[type=date]::after{
+    content: none !important;
 }
+
 .mat-form-field {
     font-size: inherit;
     font-weight: 400;
